# Cargo.toml
[package]
name = "roblox-account-manager"
version = "2.0.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image", "http"] }
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["cookies", "json", "rustls-tls"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
dirs = "5.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
urlencoding = "2.1"
webbrowser = "1.0"
regex = "1.10"
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
futures = "0.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
rusqlite = { version = "0.31", features = ["bundled"] }
windows = { version = "0.58", features = [
    "Win32_Security_Cryptography", 
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell"
] }
winapi = { version = "0.3", features = ["synchapi", "handleapi", "winbase", "minwindef", "shellapi", "winuser"] }
tray-icon = "0.19"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization, slower compile
panic = "abort"      # Smaller binary, no unwinding
strip = true         # Strip symbols

[[bin]]
name = "roblox-account-manager"
path = "src/main.rs"


[build-dependencies]
winresource = "0.1"

[package.metadata.winresource]
OriginalFilename = "Nexus.exe"
LegalCopyright = "© Nexus Underground. All rights reserved"
FileDescription = "Nexus - Account Manager"
ProductName = "Nexus Underground"
ProductVersion = "2.0.0"
CompanyName = "Nexus Underground"
